welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:19: error: too many arguments for method faireV: ()Unit
faireV(4)
      ^